reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__nested_generic_containers.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::Complex"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::Complex"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "i32",
        "description": "32-bit signed integer"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Complex",
        "fields": {
          "named": [
            {
              "name": "matrix",
              "type": {
                "name": "std::vec::Vec",
                "arguments": [
                  {
                    "name": "std::vec::Vec",
                    "arguments": [
                      {
                        "name": "u32"
                      }
                    ]
                  }
                ]
              },
              "required": true
            },
            {
              "name": "lookup",
              "type": {
                "name": "std::collections::HashMap",
                "arguments": [
                  {
                    "name": "std::string::String"
                  },
                  {
                    "name": "std::vec::Vec",
                    "arguments": [
                      {
                        "name": "std::option::Option",
                        "arguments": [
                          {
                            "name": "i32"
                          }
                        ]
                      }
                    ]
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::collections::HashMap",
        "description": "Key-value map type",
        "parameters": [
          {
            "name": "K"
          },
          {
            "name": "V"
          }
        ]
      },
      {
        "kind": "enum",
        "name": "std::option::Option",
        "description": "Optional nullable type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "representation": "none",
        "variants": [
          {
            "name": "None",
            "description": "The value is not provided, i.e. null",
            "fields": "none"
          },
          {
            "name": "Some",
            "description": "The value is provided and set to some value",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "T"
                  }
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "i32",
        "description": "32-bit signed integer"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Complex",
        "fields": {
          "named": [
            {
              "name": "matrix",
              "type": {
                "name": "std::vec::Vec",
                "arguments": [
                  {
                    "name": "std::vec::Vec",
                    "arguments": [
                      {
                        "name": "u32"
                      }
                    ]
                  }
                ]
              },
              "required": true
            },
            {
              "name": "lookup",
              "type": {
                "name": "std::collections::HashMap",
                "arguments": [
                  {
                    "name": "std::string::String"
                  },
                  {
                    "name": "std::vec::Vec",
                    "arguments": [
                      {
                        "name": "std::option::Option",
                        "arguments": [
                          {
                            "name": "i32"
                          }
                        ]
                      }
                    ]
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::collections::HashMap",
        "description": "Key-value map type",
        "parameters": [
          {
            "name": "K"
          },
          {
            "name": "V"
          }
        ]
      },
      {
        "kind": "enum",
        "name": "std::option::Option",
        "description": "Optional nullable type",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "representation": "none",
        "variants": [
          {
            "name": "None",
            "description": "The value is not provided, i.e. null",
            "fields": "none"
          },
          {
            "name": "Some",
            "description": "The value is provided and set to some value",
            "fields": {
              "unnamed": [
                {
                  "name": "0",
                  "type": {
                    "name": "T"
                  }
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  }
}
